# valetui

./: package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: configuration.rs  devtools.rs  dnsmasq.rs  mailpit.rs  main.rs  nginx.rs  php_fpm.rs  requirements.rs  site.rs  site_secure.rs
src-tauri/src/constants/: mod.rs
src-tauri/src/manager/: apt.rs  command.rs  file_system.rs  interface.rs  mod.rs  service_manager.rs  systemd.rs
src-tauri/src/paths/: mod.rs
