[package]
name = "valetui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
fs_extra = "1.3.0"

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "window-unmaximize", "window-unminimize", "window-maximize", "system-tray", "window-center", "window-close", "window-start-dragging", "window-hide", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1.5.1"
chrono = "0.4.38"
regex = "1.10.5"
dirs = "5.0.1"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
